--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
   "name": "c20",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "This wiki is a comprehensive documentation of the Halo 1 Custom Edition editing kit, as well as tools created by users.",
-  "main": "build.js",
+  "main": "gulpfile.js",
   "scripts": {
-    "build": "npm run build-styles; npm run build-content",
-    "build-content": "node build.js",
-    "build-styles": "sass src/assets/style.scss dist/assets/style.css --no-source-map",
+    "build": "gulp",
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/csauve/c20.git"
   },
-  "author": "csauve <connorsauve@gmail.com> (http://t3hz0r.com)",
+  "author": "csauve <contact@t3hz0r.com> (https://t3hz0r.com)",
   "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/csauve/c20/issues"
   },
-  "homepage": "https://github.com/csauve/c20#readme",
+  "homepage": "https://c20.reclaimers.net",
   "dependencies": {
-    "common-tags": "^1.8.0",
     "express": "^4.17.1",
+    "serve-static": "^1.14.1"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
     "front-matter": "^3.1.0",
     "glob": "^7.1.6",
     "highlight.js": "^9.18.1",
     "markdown-it": "^10.0.0",
     "sass": "^1.26.3",
-    "serve-static": "^1.14.1"
+    "common-tags": "^1.8.0"
   }
 }
