--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "gulp-transform": "^3.0.5",
     "highlight.js": "^9.18.1",
     "markdown-it": "^10.0.0",
+    "markdown-it-anchor": "^5.2.7",
+    "markdown-it-table-of-contents": "^0.4.4",
     "sass": "^1.26.3",
     "viz.js": "^2.1.2"
   }
