--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,9 @@ version: 0.2
 
 phases:
   install:
+    runtime-versions:
+      nodejs: 12.x
+  pre_build:
     commands:
       - npm ci
   build:
