--- a/build-config.json
+++ b/build-config.json
@@ -11,5 +11,6 @@
     "srcStylesAny": "./src/assets/**/*.scss",
     "vendorAssets": ["./node_modules/highlight.js/styles/atom-one-dark.css"],
     "invaderTagDefsBase": "./lib/invader/src/tag/hek/definition/"
-  }
+  },
+  "baseUrl": "https://c20.reclaimers.net"
 }
