--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-transform": "^3.0.5",
     "highlight.js": "^9.18.1",
+    "html-entities": "^1.3.1",
     "marked": "^0.8.2",
     "sass": "^1.26.3",
     "viz.js": "^2.1.2"
