--- a/build-config.json
+++ b/build-config.json
@@ -11,8 +11,8 @@
     "srcStylesAny": "./src/assets/**/*.scss",
     "vendorAssets": [
       "./node_modules/highlight.js/styles/atom-one-dark.css",
-      "./node_modules/preact/dist/preact.js",
-      "./node_modules/minisearch/dist/umd/index.js"
+      "./node_modules/@(htm)/preact/standalone.umd.js",
+      "./node_modules/@(minisearch)/dist/umd/index.js"
     ],
     "invaderDefsDir": "./lib/invader/src/tag/hek/definition/"
   },
