--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-transform": "^3.0.5",
     "highlight.js": "^9.18.1",
     "html-entities": "^1.3.1",
+    "js-yaml": "^3.13.1",
     "marked": "^0.8.2",
     "sass": "^1.26.3",
     "viz.js": "^2.1.2"
