Describe some tags via metadata, add new images. Fix broken child tags

--- a/src/data/h1/tags/actor.yml
+++ b/src/data/h1/tags/actor.yml
@@ -2,7 +2,7 @@ name: actor
 id: actr
 invaderStructName: Actor
 comments:
-  md: ...
+  md: Defines basic AI behaviour. Can be futher customized using the [actor_variant][] tag.
   fields:
     - name: flags
       md: ...
