--- a/src/data/h1/tags/device_light_fixture.yml
+++ b/src/data/h1/tags/device_light_fixture.yml
@@ -1,6 +1,6 @@
 name: device_light_fixture
 id: lifi
-parent: device
+parentName: device
 invaderStructName: DeviceLightFixture
 comments:
   md: ...
