--- a/src/data/h1/tags/placeholder.yml
+++ b/src/data/h1/tags/placeholder.yml
@@ -1,3 +1,5 @@
 name: placeholder
 id: plac
-parent: object
+parentName: object
+comments:
+  md: Used only by [Sapien][] to represent interactive handles/markers.
