--- a/src/data/h1/tags/shader_transparent_chicago_extended.yml
+++ b/src/data/h1/tags/shader_transparent_chicago_extended.yml
@@ -1,6 +1,6 @@
 name: shader_transparent_chicago_extended
 id: scex
-parent: shader
+parentName: shader
 invaderStructName: ShaderTransparentChicagoExtended
 comments:
   md: ...
