--- a/src/data/h1/tags/shader_transparent_generic.yml
+++ b/src/data/h1/tags/shader_transparent_generic.yml
@@ -1,6 +1,6 @@
 name: shader_transparent_generic
 id: sotr
-parent: shader
+parentName: shader
 invaderStructName: ShaderTransparentGeneric
 comments:
   md: ...
