--- a/src/data/h1/tags/shader_transparent_glass.yml
+++ b/src/data/h1/tags/shader_transparent_glass.yml
@@ -1,6 +1,6 @@
 name: shader_transparent_glass
 id: sgla
-parent: shader
+parentName: shader
 invaderStructName: ShaderTransparentGlass
 comments:
   md: ...
