--- a/src/data/h1/tags/shader_transparent_plasma.yml
+++ b/src/data/h1/tags/shader_transparent_plasma.yml
@@ -1,6 +1,6 @@
 name: shader_transparent_plasma
 id: spla
-parent: shader
+parentName: shader
 invaderStructName: ShaderTransparentPlasma
 comments:
   md: ...
