--- a/src/data/h1/tags/shader_transparent_water.yml
+++ b/src/data/h1/tags/shader_transparent_water.yml
@@ -1,6 +1,6 @@
 name: shader_transparent_water
 id: swat
-parent: shader
+parentName: shader
 invaderStructName: ShaderTransparentWater
 comments:
   md: ...
