--- a/src/data/h1/tags/contrail.yml
+++ b/src/data/h1/tags/contrail.yml
@@ -2,7 +2,10 @@ name: contrail
 id: cont
 invaderStructName: Contrail
 comments:
-  md: ...
+  md: >
+    Contrails are trail-like repeating [bitmap][] effects which can be attached
+    to any [object][], optionally to one of their [markers][gbxmodel#markers].
+    Commonly used for projectiles, but also for the Banshee's wingtips.
   fields:
     - name: flags
       md: ...
