--- a/src/data/h1/tags/shader_transparent_meter.yml
+++ b/src/data/h1/tags/shader_transparent_meter.yml
@@ -3,7 +3,10 @@ id: smet
 parentName: shader
 invaderStructName: ShaderTransparentMeter
 comments:
-  md: ...
+  md: >
+    Used for transparent materials with an incrementally scaled area, such as
+    first person (not HUD) heat meters for plasma weapons and the Warthog's
+    speedometer.
   fields:
     - name: meter flags
       md: ...
