Add some field descriptions, images

--- a/src/data/h1/tags/actor_variant.yml
+++ b/src/data/h1/tags/actor_variant.yml
@@ -30,7 +30,7 @@ comments:
     - name: major variant
       md: ...
     - name: mcc actor type
-      md: ...
+      md: Used for kill scoring and achievements in MCC.
       options:
         - name: brute
           md: ...
