--- a/src/data/h1/tags/scenario.yml
+++ b/src/data/h1/tags/scenario.yml
@@ -14,16 +14,16 @@ comments:
       md: ...
       fields:
         - name: sky
-          md: ...
+          md: A reference to a [sky][] tag which can be used by a BSP in this scenario.
     - name: type
-      md: ...
+      md: Determines the type of map this scenario represents. This primarily affects how the game
       options:
         - name: singleplayer
-          md: ...
+          md: The map is meant to be used for [singleplayer][map#singleplayer] and loaded with the `map_name` command. Cannot be played in multiplayer.
         - name: multiplayer
-          md: ...
+          md: The map is meant for multiplayer and can be loaded with `sv_map`.
         - name: user interface
-          md: ...
+          md: The map is meant to serve as [ui.map][map#ui] for the game's main menu.
     - name: flags
       md: ...
       fields:
@@ -311,18 +311,18 @@ comments:
             - name: dead
               md: ...
         - name: multiplayer team index
-          md: ...
+          md: Determines which team the vehicle belongs to for gametype settings. Index `0` is for red team, and index `1` is blue.
         - name: multiplayer spawn flags
           md: ...
           fields:
             - name: slayer default
-              md: ...
+              md: The vehicle will spawn in Slayer when the gametype specifies default vehicle settings.
             - name: ctf default
-              md: ...
+              md: The vehicle will spawn in CTF when the gametype specifies default vehicle settings.
             - name: king default
-              md: ...
+              md: The vehicle will spawn in King of the Hill when the gametype specifies default vehicle settings.
             - name: oddball default
-              md: ...
+              md: The vehicle will spawn in Oddball when the gametype specifies default vehicle settings.
             - name: unused
               md: ...
             - name: unused 1
@@ -332,13 +332,13 @@ comments:
             - name: unused 3
               md: ...
             - name: slayer allowed
-              md: ...
+              md: The vehicle spawn is permitted in Slayer when the gametype is using custom vehicle settings.
             - name: ctf allowed
-              md: ...
+              md: The vehicle spawn is permitted in CTF when the gametype is using custom vehicle settings.
             - name: king allowed
-              md: ...
+              md: The vehicle spawn is permitted in King of the Hill when the gametype is using custom vehicle settings.
             - name: oddball allowed
-              md: ...
+              md: The vehicle spawn is permitted in Oddball when the gametype is using custom vehicle settings.
             - name: unused 4
               md: ...
             - name: unused 5
@@ -370,7 +370,9 @@ comments:
         - name: name
           md: ...
     - name: weapons
-      md: ...
+      md: |
+        Weapon placements for singeplayer. Multiplayer weapon spawns should be
+        placed using [netgame equipment](#tag-block-netgame-equipment) instead.
       fields:
         - name: rounds left
           md: ...
@@ -386,7 +388,7 @@ comments:
             - name: does accelerate
               md: ...
     - name: weapon palette
-      md: ...
+      md: The types of weapons that can be placed throughout a singeplayer scenario.
       fields:
         - name: name
           md: ...
@@ -550,7 +552,7 @@ comments:
         - name: facing
           md: ...
         - name: team index
-          md: ...
+          md: Determines which team the spawn point belongs to for CTF (the game may use any spawn point for other gametypes). Index `0` is for red team, and index `1` is blue.
         - name: bsp index
           md: ...
         - name: type 0
@@ -686,18 +688,20 @@ comments:
             - name: all except race ctf
               md: ...
     - name: trigger volumes
-      md: ...
+      md: |
+        Axis-aligned volumes which can be used in scripts to test for the
+        presence an object: `(volume_test_object "volume_name" <object>)`.
       fields:
         - name: unknown
           md: ...
         - name: name
-          md: ...
+          md: The name of the volume which can be used in scripts.
         - name: unknown values
           md: ...
         - name: starting corner
-          md: ...
+          md: The 3D world-unit coordinates of one corner of the volume.
         - name: ending corner offset
-          md: ...
+          md: The offset distances from the starting corner to the opposite corner.
     - name: recorded animations
       md: ...
       fields:
