--- a/src/data/h1/tools.yml
+++ b/src/data/h1/tools.yml
@@ -9,6 +9,11 @@ workflowItems:
     page: 3dsmax
     authors:
       - Autodesk
+  Maya:
+    page: maya
+    authors:
+      - Autodesk
+      - Alias (formerly)
   Photoshop:
     page: photoshop
     authors:
@@ -55,6 +60,12 @@ workflowItems:
   Sapien:
     inherit: HEK
     page: sapien
+  Lightmaps:
+    page:  lightmaps
+  Aether:
+    page: aether
+    authors:
+      - TheFieryScythe
   LM_Tool:
     page: lm_tool
     authors:
@@ -105,8 +116,6 @@ workflowItems:
     page: jms
   Animation data:
     page: animation-data
-  max:
-    page: 3dsmax
   tif:
     url: https://en.wikipedia.org/wiki/TIFF
   bmp:
@@ -115,6 +124,10 @@ workflowItems:
     url: https://en.wikipedia.org/wiki/Portable_Network_Graphics
   tga:
     url: https://en.wikipedia.org/wiki/Truevision_TGA
+  jpg:
+    url: https://en.wikipedia.org/wiki/JPEG
+  collada:
+    url: https://en.wikipedia.org/wiki/COLLADA
   map:
     page: map
   actor:
@@ -306,6 +319,9 @@ similarItems:
     - OS_Tool
     - LM_Tool
   -
+    - LM_Tool
+    - Aether
+  -
     - Sapien
     - OS_Sapien
   -
@@ -333,13 +349,11 @@ workflows:
       - bmp
       - png
       - tga
-  - using: 3ds Max
-    edit: max
   # 3d exports/imports
   - using:
       - Blitzkrieg
       - Bluestreak
-    from: max
+    from: 3ds Max
     to: jms
   - using: Blender .gbxmodel Importer
     from: gbxmodel
@@ -350,6 +364,16 @@ workflows:
   - using: H2V Blender Animation Exporter
     from: Blender
     to: Animation data
+  # 3d interchange formats
+  - using: collada
+    from:
+      - 3ds Max
+      - Blender
+      - Maya
+    to:
+      - 3ds Max
+      - Blender
+      - Maya
   # bitmap compilation
   - using: Tool
     from: tif
@@ -375,11 +399,32 @@ workflows:
       - invader-build
     from: scenario
     to: map
-  # lightmaps
+  # lightmaps and bsps
   - using:
       - Tool
       - LM_Tool
-    edit: scenario_structure_bsp
+      - Aether
+    edit: Lightmaps
+  - using: Aether
+    from: scenario_structure_bsp
+    to:
+      - 3ds Max
+      - Maya
+  - using: Aether
+    from: scenario
+    to:
+      - 3ds Max
+      - Maya
+  - using: Aether
+    from: Lightmaps
+    to: bmp
+  - using: Aether
+    from:
+      - tif
+      - png
+      - bmp
+      - jpg
+    to: Lightmaps
   # animation compilation
   - using: Tool
     from: Animation data
